--- a/packages/docs/src/content/docs/guides/using-a-service.mdx
+++ b/packages/docs/src/content/docs/guides/using-a-service.mdx
@@ -11,9 +11,10 @@ Once you've [created a service](/guides/creating-a-service), there are a few way
 
 ## Top-Level
 
-You can safely destructure anything in rimitive from a service, so it's common to do this:
+You can safely destructure anything in Rimitive from a service, so it's common to see this:
 
 ```typescript
+// myService.ts
 import { compose } from '@rimitive/core';
 import { SignalModule, ComputedModule, EffectModule } from '@rimitive/signals/extend';
 
@@ -26,7 +27,7 @@ effect(() => {
 });
 ```
 
-Great for simple scripts or when you only need a single service. In rimitive, it's also common to export the service as well as the service type directly, which comes in handy _a lot_:
+Great for simple scripts or when you only need a single service. In Rimitive, it's also common to export the service as well as the service type directly, which comes in handy _a lot_:
 
 ```typescript
 // myService.ts
@@ -40,7 +41,7 @@ export type Service = typeof svc;
 
 ## In a Function
 
-rimitive makes heavy usage of plain factory functions that encapsulate bits of reactive behavior, like:
+Rimitive makes heavy usage of factory functions that look like components or hooks you might be used to from other frameworks:
 
 ```typescript
 import { signal } from './myService.ts'
@@ -57,10 +58,14 @@ counter.increment();
 counter.count(); // 1
 ```
 
-The above is simply a factory that instantiates reactive state and returns an api to drive it. In rimitive, this pattern is called a ["behavior"](/guides/creating-a-behavior), which is conventionally prefixed with `use*` for clarity (ie `useCounter` instead of `myCounter`).
+But a nuance here is that the above is **simply a factory** that instantiates reactive state and returns an api to drive it 🚗. In Rimitive, this pattern is called a ["behavior"](/guides/creating-a-behavior), which is conventionally prefixed with `use*` for clarity (ie `useCounter` instead of `myCounter`).
 
 <Aside type="note">
-React peeps: prefixing with `use*` in rimitive is **just convention and nice semantics**. You can totally use behaviors in vanilla js, no problem. It doesn't grant the function any magical reactive abilities, or require you to obey any rules in how it's used.
+React peeps: prefixing with `use*` in rimitive is **just convention and nice semantics**. You can use behaviors in vanilla js, no problem. It doesn't grant the function any magical reactive abilities or reactive closures, or require you to obey any rules in how it's used.
 </Aside>
 
-You can stop right here, if that's all you need! But if you want to actually drive a reactive ui with state (a "component"), rimitive has primitives and patterns to help you with that too. Next up though, let's talk about the [behavior pattern](/guides/creating-a-behavior).
+You can stop right here, if that's all you need! For plenty of apps simple apps, behaviors might be enough.
+
+If you want to drive a reactive ui with state, Rimitive also has primitives and patterns to help you with that.
+
+Next up though, let's talk more about the [behavior pattern](/guides/creating-a-behavior).
